@@ -79,14 +79,21 @@ panelSystemTray.border=System Tray
 panelSound.border=Sound
 panelDesc.border=Description files
 panelAdvanced.border=Advanced
+panelSpeedLimiter.border=Speed limiter
 labelMaxConcurrentDownloads.text=&Max concurrent downloads at a time
 labelRequiresRestart.text=* Effective on restart
 labelErrorAttemptsCount.text=&Error attempts count
 labelAutoReconnectTime.text=&Autoreconnect time
 labelSeconds.text=seconds
 labelTextFileFormat.text=text file in format [$SOCKS$][user[:password]@]host:port
-labelNoAutoreconnect.text=(0 = autoreconnect off, -1 = repeat indefinitely)
+labelNoAutoreconnect.text=(0 = autoreconnect off, -1 = repeat infinitely)
 labelIfFilenameExists.text=If a filename already &exists:
+labelSpeedSliderMinValue.text=Global speed limiter minimum value
+labelSpeedSliderMaxValue.text=maximum value
+labelSpeedSliderStep.text=step
+labelSpeedSliderKbps.text=kB/s
+labelFileSpeedLimiterValues.text=Values for file speed limiter
+fieldFileSpeedLimiterValues.toolTipText=Separate values with commas. Two commas indicate a menu separator. 0 means unlimited.
 
 labelRemoveCompleted.text=Remove completed downloads
 
@@ -143,7 +150,7 @@ labelCheckForUpdateEvery.text=Check &for updates every
 labelHours.text=hour(s)
 labelManualCheck.text=For manual check use function in menu "Help - Check for new plugins"
 
-comboHowToUpdate_list=Ask what to do|Show update dialog first|Update automatic without asking
+comboHowToUpdate_list=Ask what to do|Show update dialog first|Update automatically without asking
 
 pluginPanelSettings.tab.title=Settings
 pluginPanelUpdates.tab.title=Updates
@@ -178,7 +185,7 @@ deSelectAllActivityAction.Action.smallIcon=${iconsPath}uncheck.png
 
 checkForFileExistenceBeforeDownload.text=Check for file existence on the server before downloading
 checkServiceAsIconOnly.text=Represent download service only by an icon without text in table
-checkSlimLinesInHistory.text=Show slim lines in History dialog
+checkSlimLinesInHistory.text=Slim lines in History dialog
 
 checkRecheckFilesOnStart.text=Re-check for file existence on the server when application starts
 invalidURL=Plugin server address is not valid URL:%n%s
